--- a/Beauty_Motos/ICliente.xaml
+++ b/Beauty_Motos/ICliente.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Beauty_Motos.Cliente"
+﻿<Window x:Class="Beauty_Motos.ICliente"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
